<resources>
    <string name="app_name">SoccerInfo</string>
    <string name="myurl">https://www.thesportsdb.com/api/v1/json/1/search_all_teams.php?l=English%20Premier%20League</string>
    <string name="minimum_password">minimum password should have 6 characters</string>
    <string name="auth_failed">authentication failed</string>
    <string name="teams">TEAMS</string>
    <string name="schedule">Schedule</string>
    <string name="result">RESULT</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="strTeam">strTeam</string>
    <string name="idTeam">idTeam</string>
    <string name="strTeamShort">strTeamShort</string>
    <string name="strDescriptionEn">strDescriptionEn</string>
    <string name="strAlternate">strAlternate</string>
    <string name="strWebsite">strWebsite</string>
    <string name="strTeamBadge">strTeamBadge</string>
    <string name="results">teams</string>
    <string name="playerUrl">https://www.thesportsdb.com/api/v1/json/1/lookup_all_players.php?id=</string>
    <string name="scheduleurl">https://www.thesportsdb.com/api/v1/json/1/eventsseason.php?id=4328&amp;s=1415</string>
    <string name="resulturl">https://www.thesportsdb.com/api/v1/json/1/lookuptable.php?l=4328&amp;s=1415</string>
    <string name="loading">Loading</string>
    <string name="events">events</string>
    <string name="strEvent">strEvent</string>
    <string name="scrollpos">ScrollPos</string>
    <string name="strDate">strDate</string>
    <string name="strTime">strTime</string>
    <string name="Loading">Loading Data</string>
    <string name="played">played</string>
    <string name="win">win</string>
    <string name="loss">loss</string>
    <string name="draw">draw</string>
    <string name="table">table</string>
    <string name="name">name</string>
    <string name="title_activity_team_details_displayer">TeamDetailsDisplayer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="TeamData">teamData</string>
    <string name="POS">position</string>
    <string name="show_players">Show Players</string>
    <string name="hide_players">Hide Players</string>
    <string name="strDescriptionEN">strDescriptionEN</string>
    <string name="ID">id</string>
    <string name="player">player</string>
    <string name="strPlayer">strPlayer</string>
    <string name="idPlayer">idPlayer</string>
    <string name="strNationality">strNationality</string>
    <string name="strThumb">strThumb</string>
    <string name="title_activity_player_details_displayer">PlayerDetailsDisplayer</string>
    <string name="PlayerData">PlayerData</string>
    <string name="unknoun_uri">Unknown URI</string>
    <string name="shows_favourites">Shows Favourites</string>
    <string name="icon">icon</string>
    <string name="Message">Add some Favorites</string>
    <string name="OK">ok</string>
    <string name="NoFavourites">No Favourites to display</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="PlayerPref">PlayerPref</string>
    <string name="Logged">logged</string>
    <string name="fav">fav</string>
    <string name="logout">logout</string>
    <string name="NoInternetConnection">No Internet Connection</string>
    <string name="playerlogo">Displays Image of Player</string>
    <string name="teamImage">Displays Image of the Team Jersey</string>
    <string name="AddTOFavourites">Add To Favourites</string>
    <string name="enter_user_name">enter user name</string>
    <string name="logo">logo</string>
    <string name="played_matches">played:</string>
    <string name="played_win">win:</string>
    <string name="played_loss">loss:</string>
    <string name="played_draw">draw:</string>
    <string name="teamOtherName">Other Name:</string>
    <string name="TeamDescription">Description:</string>
    <string name="pLayer_team_name">Team Name:</string>
    <string name="pLayer_nationality">Nationality:</string>
    <string name="pLayer_description">Descrption:</string>
    <string name="team_website">Website:</string>
    <string name="Email_required">email is required</string>
    <string name="password_required">enter password</string>
    <string name="Success">Task Successfull</string>
    <string name="not_implemented">Not yet implemented</string>
    <string name="loggedoff">User Logged Off</string>
    <string name="teamIcon">team Icon</string>
    <string name="scheduleIcon">scheduleIcon</string>
    <string name="resultIcon">resultIcon</string>
</resources>
