...
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/twentysp" />
        />

        <EditText
            android:id="@+id/id_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/ten"
            android:hint="@string/enter_user_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
...
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/twentysp" />
        />

        <EditText
            android:id="@+id/id_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/ten"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
...
