...
                        android:layout_gravity="center"
                        android:text="@string/teams" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/scedule"
                android:layout_width="@dimen/onefifty"
                android:layout_height="@dimen/onetwenty"
                android:layout_marginEnd="@dimen/fifteen"
                app:cardBackgroundColor="@color/green">

                <LinearLayout
...
